--- a/exact-binding/src/main/resources/xmlreader.vm
+++ b/exact-binding/src/main/resources/xmlreader.vm
@@ -108,10 +108,11 @@ public class ${simpleclass}XmlReader extends com.thoratou.exact.bom.XmlReader<${
         #set( $extensionName = $processingutil.generateVariableNameFromClassName($extension) )
         /*$extension => $extensionmap.get($extension)*/
         #set( $step = $extensionmap.get($extension).getExtensionStep() )
-        public com.thoratou.exact.bom.XmlExtensionReader<com.thoratou.exact.fields.FieldString>
+        #set( $return = $step.getReturnListType() )
+        public com.thoratou.exact.bom.XmlExtensionReader<$return>
             ${extensionName}XmlReader =
-                new com.thoratou.exact.bom.XmlExtensionReader<com.thoratou.exact.fields.FieldString>(
-                    new com.thoratou.exact.fields.FieldString()
+                new com.thoratou.exact.bom.XmlExtensionReader<$return>(
+                    new $return()
                 )
                 {
                     /*$step*/
